--- a/NavigationJava/app/build.gradle
+++ b/NavigationJava/app/build.gradle
@@ -5,9 +5,11 @@ plugins {
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
-
+    buildFeatures {
+        viewBinding true
+    }
     defaultConfig {
-        applicationId "com.example.navigationjava"
+        applicationId "com.example.Navigationjava"
         minSdkVersion 30
         targetSdkVersion 30
         versionCode 1
@@ -26,28 +28,37 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
-    buildFeatures {
-        viewBinding true
-    }
 }
 
 dependencies {
+    def nav_version = "2.3.3"
 
+    // Java language implementation
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    def lifecycle_version = "2.3.0"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    // Lifecycles only (without ViewModel or LiveData)
+
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.fragment:fragment:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-
-    implementation 'androidx.fragment:fragment:1.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata:2.3.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.0'
-    implementation 'androidx.navigation:navigation-ui:2.3.0'
-
-
+    //implementation 'androidx.navigation:navigation‐fragment:2.3.4'
+    //implementation 'androidx.navigation:navigation‐ui:2.3.4'
+    //implementation 'androidx.lifecycle:lifecycle‐viewmodel:2.3.0'
+    //implementation 'androidx.lifecycle:lifecycle‐livedata:2.3.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.4'
+    implementation 'androidx.navigation:navigation-ui:2.3.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-
 }
