--- a/NavigationJava/gradle/wrapper/gradle-wrapper.properties
+++ b/NavigationJava/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Mar 30 14:22:06 CST 2021
+#Tue Mar 30 14:29:23 GMT+08:00 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
